Fix info popup overflow: add box-sizing border-box to stream-extra-info and mix-extra-info
Amp-Thread-ID: https://ampcode.com/threads/T-019ca176-e368-709c-b3b7-da4e5e2ab092

--- a/common.css
+++ b/common.css
@@ -482,6 +482,7 @@
 
 .stream-extra-info {
   width: 100%;
+  box-sizing: border-box;
   margin-top: 8px;
   margin-left: 0;
   margin-right: 0;
